Fixing content height on mobile devices

--- a/assets/scss/custom/after_variables.scss
+++ b/assets/scss/custom/after_variables.scss
@@ -11,11 +11,9 @@ a {
 }
 
 body {
-    @media (min-width: 1024px) {
-        display: flex;
-        min-height: 100vh;
-        flex-direction: column;
-    }
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 .site-content {
